Fixed styling issues: - Added local Font Awesome icons - Fixed text alignment to left - Fixed profile picture sizing - Added LinkedIn icon and link - Improved responsive design

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,45 +1,78 @@
 /* Base styles */
 body {
     font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #333;
-    background: #fafafa;
+    color: #444;
+    background: #f0f0f0;
     font-size: 16px;
     line-height: 1.5;
     margin: 0;
     padding: 0;
+    text-align: left;
 }
 
 /* Container */
 #cv-content {
     background: #fff;
     max-width: 48em;
-    margin: 0 auto;
-    padding: 4em 8em;
-    border: 1px solid #eee;
-    box-shadow: 0 0 3px rgba(0,0,0,0.1);
+    margin: 2em auto;
+    padding: 2em 3em;
+    border: 1px solid #ddd;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+    text-align: left;
+}
+
+/* Profile Header */
+.profile-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-bottom: 2em;
+}
+
+.profile-info {
+    flex: 1;
+    padding-right: 2em;
+}
+
+.profile-image {
+    flex: 0 0 auto;
+    width: 100px;
+}
+
+.profile-image img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 2px solid #fff;
+    box-shadow: 0 0 3px rgba(0,0,0,0.2);
+    display: block;
 }
 
 /* Header & Contact */
+h1, h2, h3, p, ul, li, .contact, .profile-info {
+    text-align: left;
+}
+
 h1 {
     margin: 0 0 0.5em;
     font-size: 3em;
     font-weight: 700;
-    color: #000;
+    color: #222;
     line-height: 1;
-    border: none;
 }
 
 .contact {
-    margin-bottom: 3em;
-    color: #666;
+    margin-bottom: 2em;
+    color: #555;
 }
 
 .contact p {
-    margin: 0.5em 0;
+    margin: 0.25em 0;
 }
 
 .contact a {
-    color: #2879d0;
+    color: #0076df;
     text-decoration: none;
 }
 
@@ -47,55 +80,97 @@ h1 {
     text-decoration: underline;
 }
 
+.contact i {
+    color: #555;
+    margin-right: 0.3em;
+}
+
 /* Sections */
 section {
-    margin: 2em 0 3em;
+    margin: 1.5em 0;
 }
 
 h2 {
     text-transform: uppercase;
     font-size: 1.4em;
     letter-spacing: 0.1em;
-    color: #2879d0;
+    color: #222;
     margin: 0 0 1.5em;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #ddd;
     padding-bottom: 0.5em;
 }
 
 h3 {
     font-size: 1.2em;
     margin: 1.5em 0 0.5em;
-    color: #000;
+    color: #222;
 }
 
-/* Experience */
-p strong {
-    color: #000;
-}
-
+/* Lists and Content */
 ul {
-    padding-left: 1.5em;
+    padding-left: 1.2em;
     margin: 0.5em 0 1.5em;
 }
 
 li {
     margin: 0.5em 0;
-    color: #666;
+    color: #555;
+}
+
+p strong {
+    color: #222;
+}
+
+/* Loading state */
+#cv-content.loading {
+    text-align: center;
+    color: #555;
+    font-style: italic;
+    padding: 2em;
+}
+
+/* Responsive */
+@media screen and (max-width: 768px) {
+    #cv-content {
+        padding: 2em;
+        margin: 1em;
+    }
+    
+    .profile-header {
+        flex-direction: column-reverse;
+        align-items: flex-start;
+    }
+
+    .profile-image {
+        width: 80px;
+    }
+
+    .profile-image img {
+        width: 80px;
+        height: 80px;
+    }
+
+    .profile-info {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    #cv-content {
+        padding: 1em;
+        margin: 0.5em;
+    }
+    
+    h1 {
+        font-size: 2em;
+    }
 }
 
 /* Skills section */
 .skills strong {
     display: inline-block;
     margin-right: 0.5em;
-    color: #000;
-}
-
-/* Loading state */
-#cv-content.loading {
-    text-align: center;
-    color: #666;
-    font-style: italic;
-    padding: 2em;
+    color: #222;
 }
 
 /* Print styles */
@@ -123,62 +198,6 @@ li {
     #cv-content {
         padding: 4em;
         margin: 0 2em;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    #cv-content {
-        padding: 2em;
-        margin: 0 1em;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    #cv-content {
-        padding: 1em;
-        margin: 0 0.5em;
-    }
-}
-
-/* Profile Header */
-.profile-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    margin-bottom: 2em;
-}
-
-.profile-info {
-    flex: 1;
-}
-
-.profile-image {
-    margin-left: 2em;
-}
-
-.profile-image img {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    object-fit: cover;
-    border: 3px solid #fff;
-    box-shadow: 0 0 3px rgba(0,0,0,0.2);
-}
-
-/* Responsive adjustments for profile */
-@media screen and (max-width: 768px) {
-    .profile-header {
-        flex-direction: column-reverse;
-        align-items: center;
-        text-align: center;
-    }
-
-    .profile-image {
-        margin: 0 0 1em 0;
-    }
-
-    .profile-info {
-        width: 100%;
     }
 }
   
